--- a/risk-lens-extension/manifest.json
+++ b/risk-lens-extension/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "webRequest",
     "webRequestBlocking",
-    "<all_urls>"
+    "<all_urls>",
+    "https://risklens-api-9e7l.onrender.com/*"
   ],
   "browser_action": {
     "default_title": "RiskLens",
